# sweph-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml
sweph/: Cargo.toml
sweph-sys/: Cargo.toml  build.rs
sweph-sys/src/: lib.rs
sweph/src/: lib.rs
